@@ -13,10 +13,14 @@
  */
 package io.trino.plugin.deltalake;
 
+import com.google.common.collect.HashMultiset;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableMultiset;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Multiset;
 import io.airlift.units.Duration;
+import io.trino.filesystem.TrackingFileSystemFactory;
 import io.trino.filesystem.hdfs.HdfsFileSystemFactory;
 import io.trino.plugin.deltalake.transactionlog.AddFileEntry;
 import io.trino.plugin.deltalake.transactionlog.CommitInfoEntry;
@@ -59,22 +63,29 @@ import static com.google.common.collect.MoreCollectors.onlyElement;
 import static com.google.common.collect.Sets.union;
 import static io.airlift.slice.Slices.utf8Slice;
 import static io.airlift.testing.Assertions.assertEqualsIgnoreOrder;
+import static io.trino.filesystem.TrackingFileSystemFactory.OperationType.INPUT_FILE_GET_LENGTH;
+import static io.trino.filesystem.TrackingFileSystemFactory.OperationType.INPUT_FILE_NEW_STREAM;
 import static io.trino.plugin.deltalake.DeltaLakeColumnType.REGULAR;
 import static io.trino.plugin.deltalake.transactionlog.DeltaLakeSchemaSupport.extractColumnMetadata;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogParser.LAST_CHECKPOINT_FILENAME;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogUtil.TRANSACTION_LOG_DIRECTORY;
 import static io.trino.plugin.hive.HiveTestUtils.HDFS_ENVIRONMENT;
+import static io.trino.plugin.hive.HiveTestUtils.HDFS_FILE_SYSTEM_STATS;
 import static io.trino.spi.type.TimeZoneKey.UTC_KEY;
+import static io.trino.testing.MultisetAssertions.assertMultisetsEqual;
 import static io.trino.testing.TestingConnectorSession.SESSION;
 import static io.trino.type.InternalTypeManager.TESTING_TYPE_MANAGER;
 import static java.lang.String.format;
 import static java.time.ZoneOffset.UTC;
+import static java.util.Collections.nCopies;
+import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toCollection;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertTrue;
 
-@Test(singleThreaded = true)
+@Test(singleThreaded = true) // e.g. TrackingFileSystemFactory is shared mutable state
 public class TestTransactionLogAccess
 {
     private static final Set<String> EXPECTED_ADD_FILE_PATHS = ImmutableSet.of(
@@ -99,15 +110,15 @@ public class TestTransactionLogAccess
             new RemoveFileEntry("age=42/part-00000-6aed618a-2beb-4edd-8466-653e67a9b380.c000.snappy.parquet", 1579190155406L, false),
             new RemoveFileEntry("age=42/part-00000-b82d8859-84a0-4f05-872c-206b07dd54f0.c000.snappy.parquet", 1579190163932L, false));
 
+    private final TrackingFileSystemFactory trackingFileSystemFactory = new TrackingFileSystemFactory(new HdfsFileSystemFactory(HDFS_ENVIRONMENT, HDFS_FILE_SYSTEM_STATS));
+
     private TransactionLogAccess transactionLogAccess;
     private TableSnapshot tableSnapshot;
 
-    private AccessTrackingFileSystemFactory accessTrackingFileSystemFactory;
-
-    private void setupTransactionLogAccess(String tableName)
+    private void setupTransactionLogAccessFromResources(String tableName, String resourcePath)
             throws Exception
     {
-        setupTransactionLogAccess(tableName, getClass().getClassLoader().getResource("databricks/" + tableName).toString());
+        setupTransactionLogAccess(tableName, getClass().getClassLoader().getResource(resourcePath).toString());
     }
 
     private void setupTransactionLogAccess(String tableName, String tableLocation)
@@ -122,7 +133,6 @@ public class TestTransactionLogAccess
         TestingConnectorContext context = new TestingConnectorContext();
         TypeManager typeManager = context.getTypeManager();
 
-        accessTrackingFileSystemFactory = new AccessTrackingFileSystemFactory(new HdfsFileSystemFactory(HDFS_ENVIRONMENT));
         FileFormatDataSourceStats fileFormatDataSourceStats = new FileFormatDataSourceStats();
 
         transactionLogAccess = new TransactionLogAccess(
@@ -130,14 +140,16 @@ public class TestTransactionLogAccess
                 new CheckpointSchemaManager(typeManager),
                 deltaLakeConfig,
                 fileFormatDataSourceStats,
-                accessTrackingFileSystemFactory,
+                trackingFileSystemFactory,
                 new ParquetReaderConfig());
 
         DeltaLakeTableHandle tableHandle = new DeltaLakeTableHandle(
                 "schema",
                 tableName,
+                true,
                 "location",
-                Optional.empty(), // ignored
+                new MetadataEntry("id", "test", "description", null, "", ImmutableList.of(), ImmutableMap.of(), 0),
+                new ProtocolEntry(1, 2, Optional.empty(), Optional.empty()),
                 TupleDomain.none(),
                 TupleDomain.none(),
                 Optional.empty(),
@@ -145,8 +157,7 @@ public class TestTransactionLogAccess
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
-                0,
-                false);
+                0);
 
         tableSnapshot = transactionLogAccess.loadSnapshot(tableHandle.getSchemaTableName(), tableLocation, SESSION);
     }
@@ -155,14 +166,14 @@ public class TestTransactionLogAccess
     public void testGetMetadataEntry()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
 
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
 
         assertEquals(metadataEntry.getCreatedTime(), 1579190100722L);
         assertEquals(metadataEntry.getId(), "b6aeffad-da73-4dde-b68e-937e468b1fdf");
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("age");
-        assertThat(metadataEntry.getCanonicalPartitionColumns()).containsOnly("age");
+        assertThat(metadataEntry.getLowercasePartitionColumns()).containsOnly("age");
 
         MetadataEntry.Format format = metadataEntry.getFormat();
         assertEquals(format.getOptions().keySet().size(), 0);
@@ -175,10 +186,10 @@ public class TestTransactionLogAccess
     public void testGetMetadataEntryUppercase()
             throws Exception
     {
-        setupTransactionLogAccess("uppercase_columns");
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        setupTransactionLogAccessFromResources("uppercase_columns", "databricks73/uppercase_columns");
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("ALA");
-        assertThat(metadataEntry.getCanonicalPartitionColumns()).containsOnly("ala");
+        assertThat(metadataEntry.getLowercasePartitionColumns()).containsOnly("ala");
         assertEquals(tableSnapshot.getCachedMetadata(), Optional.of(metadataEntry));
     }
 
@@ -186,7 +197,7 @@ public class TestTransactionLogAccess
     public void testGetActiveAddEntries()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
 
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
         Set<String> paths = addFileEntries
@@ -216,7 +227,7 @@ public class TestTransactionLogAccess
     public void testAddFileEntryUppercase()
             throws Exception
     {
-        setupTransactionLogAccess("uppercase_columns");
+        setupTransactionLogAccessFromResources("uppercase_columns", "databricks73/uppercase_columns");
 
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
         AddFileEntry addFileEntry = addFileEntries
@@ -229,7 +240,7 @@ public class TestTransactionLogAccess
                 .containsEntry("ALA", "1");
         assertThat(addFileEntry.getCanonicalPartitionValues())
                 .hasSize(1)
-                .containsEntry("ala", Optional.of("1"));
+                .containsEntry("ALA", Optional.of("1"));
     }
 
     @Test
@@ -239,7 +250,7 @@ public class TestTransactionLogAccess
         // Test data contains two add entries which should be pruned:
         // - Added in the parquet checkpoint but removed in a JSON commit
         // - Added in a JSON commit and removed in a later JSON commit
-        setupTransactionLogAccess("person_test_pruning");
+        setupTransactionLogAccessFromResources("person_test_pruning", "databricks73/person_test_pruning");
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
         Set<String> paths = addFileEntries
                 .stream()
@@ -254,7 +265,7 @@ public class TestTransactionLogAccess
     public void testAddEntryOverrides()
             throws Exception
     {
-        setupTransactionLogAccess("person_test_pruning");
+        setupTransactionLogAccessFromResources("person_test_pruning", "databricks73/person_test_pruning");
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
 
         // Test data contains two entries which are added multiple times, the most up to date one should be the only one in the active list
@@ -263,11 +274,9 @@ public class TestTransactionLogAccess
                 "age=28/part-00000-40dd1707-1d42-4328-a59a-21f5c945fe60.c000.snappy.parquet");
 
         for (String path : overwrittenPaths) {
-            List<AddFileEntry> activeEntries = addFileEntries
-                    .stream()
+            List<AddFileEntry> activeEntries = addFileEntries.stream()
                     .filter(addFileEntry -> addFileEntry.getPath().equals(path))
-                    .collect(Collectors.toList());
-
+                    .toList();
             assertEquals(activeEntries.size(), 1);
             assertEquals(activeEntries.get(0).getModificationTime(), 9999999L);
         }
@@ -277,14 +286,13 @@ public class TestTransactionLogAccess
     public void testAddRemoveAdd()
             throws Exception
     {
-        setupTransactionLogAccess("person_test_pruning");
+        setupTransactionLogAccessFromResources("person_test_pruning", "databricks73/person_test_pruning");
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
 
         // Test data contains an entry added by the parquet checkpoint, removed by a JSON action, and then added back by a later JSON action
-        List<AddFileEntry> activeEntries = addFileEntries
-                .stream()
+        List<AddFileEntry> activeEntries = addFileEntries.stream()
                 .filter(addFileEntry -> addFileEntry.getPath().equals("age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(activeEntries.size(), 1);
         assertEquals(activeEntries.get(0).getModificationTime(), 9999999L);
@@ -294,7 +302,7 @@ public class TestTransactionLogAccess
     public void testGetRemoveEntries()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
 
         try (Stream<RemoveFileEntry> removeEntries = transactionLogAccess.getRemoveEntries(tableSnapshot, SESSION)) {
             Set<RemoveFileEntry> removedEntries = removeEntries.collect(Collectors.toSet());
@@ -306,7 +314,7 @@ public class TestTransactionLogAccess
     public void testGetCommitInfoEntries()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
         try (Stream<CommitInfoEntry> commitInfoEntries = transactionLogAccess.getCommitInfoEntries(tableSnapshot, SESSION)) {
             Set<CommitInfoEntry> entrySet = commitInfoEntries.collect(Collectors.toSet());
             assertEquals(
@@ -326,24 +334,24 @@ public class TestTransactionLogAccess
 
     // Broader tests which validate common attributes across the wider data set
     @DataProvider
-    public Object[][] tableNames()
+    public Object[][] tables()
     {
         return new Object[][] {
-                {"person"},
-                {"person_without_last_checkpoint"},
-                {"person_without_old_jsons"},
-                {"person_without_checkpoints"}
+                {"person", "databricks73/person"},
+                {"person_without_last_checkpoint", "databricks73/person_without_last_checkpoint"},
+                {"person_without_old_jsons", "databricks73/person_without_old_jsons"},
+                {"person_without_checkpoints", "databricks73/person_without_checkpoints"}
         };
     }
 
-    @Test(dataProvider = "tableNames")
-    public void testAllGetMetadataEntry(String tableName)
+    @Test(dataProvider = "tables")
+    public void testAllGetMetadataEntry(String tableName, String resourcePath)
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
 
         transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
 
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("age");
 
@@ -352,11 +360,11 @@ public class TestTransactionLogAccess
         assertEquals(format.getProvider(), "parquet");
     }
 
-    @Test(dataProvider = "tableNames")
-    public void testAllGetActiveAddEntries(String tableName)
+    @Test(dataProvider = "tables")
+    public void testAllGetActiveAddEntries(String tableName, String resourcePath)
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
 
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
         Set<String> paths = addFileEntries
@@ -367,11 +375,11 @@ public class TestTransactionLogAccess
         assertEquals(paths, EXPECTED_ADD_FILE_PATHS);
     }
 
-    @Test(dataProvider = "tableNames")
-    public void testAllGetRemoveEntries(String tableName)
+    @Test(dataProvider = "tables")
+    public void testAllGetRemoveEntries(String tableName, String resourcePath)
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
 
         try (Stream<RemoveFileEntry> removeEntries = transactionLogAccess.getRemoveEntries(tableSnapshot, SESSION)) {
             Set<String> removedPaths = removeEntries.map(RemoveFileEntry::getPath).collect(Collectors.toSet());
@@ -381,15 +389,14 @@ public class TestTransactionLogAccess
         }
     }
 
-    @Test(dataProvider = "tableNames")
-    public void testAllGetProtocolEntries(String tableName)
+    @Test(dataProvider = "tables")
+    public void testAllGetProtocolEntries(String tableName, String resourcePath)
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
 
         try (Stream<ProtocolEntry> protocolEntryStream = transactionLogAccess.getProtocolEntries(tableSnapshot, SESSION)) {
-            List<ProtocolEntry> protocolEntries = protocolEntryStream.collect(Collectors.toList());
-
+            List<ProtocolEntry> protocolEntries = protocolEntryStream.toList();
             assertEquals(protocolEntries.size(), 1);
             assertEquals(protocolEntries.get(0).getMinReaderVersion(), 1);
             assertEquals(protocolEntries.get(0).getMinWriterVersion(), 2);
@@ -401,13 +408,12 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        // setupTransactionLogAccess(tableName, new Path(getClass().getClassLoader().getResource("databricks/" + tableName).toURI()));
         File tempDir = Files.createTempDirectory(null).toFile();
         File tableDir = new File(tempDir, tableName);
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        java.nio.file.Path resourceDir = java.nio.file.Paths.get(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        java.nio.file.Path resourceDir = java.nio.file.Paths.get(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         for (int i = 0; i < 12; i++) {
             String extension = i == 10 ? ".checkpoint.parquet" : ".json";
             String fileName = format("%020d%s", i, extension);
@@ -434,7 +440,7 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 7, resourceDir, transactionLogDir);
         setupTransactionLogAccess(tableName, tableDir.toURI().toString());
 
@@ -476,7 +482,7 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 8, resourceDir, transactionLogDir);
         setupTransactionLogAccess(tableName, tableDir.toURI().toString());
 
@@ -522,12 +528,9 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 12, resourceDir, transactionLogDir);
         Files.copy(new File(resourceDir, LAST_CHECKPOINT_FILENAME).toPath(), new File(transactionLogDir, LAST_CHECKPOINT_FILENAME).toPath());
-
-        setupTransactionLogAccess(tableName, tableDir.toURI().toString());
-        List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
 
         Set<String> originalDataFiles = ImmutableSet.of(
                 "age=42/part-00000-b26c891a-7288-4d96-9d3b-bef648f12a34.c000.snappy.parquet",
@@ -541,32 +544,36 @@ public class TestTransactionLogAccess
                 "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
                 "age=30/part-00000-37ccfcd3-b44b-4d04-a1e6-d2837da75f7a.c000.snappy.parquet");
 
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), originalDataFiles);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000010.checkpoint.parquet", 2,
-                        // the file is accessed once when the transaction log tail is created
-                        // and then it tries to access the following file but that file does not
-                        // exist so it knows that it has reached the end of the tail
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir.toURI().toString());
+                    List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), originalDataFiles);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
 
         copyTransactionLogEntry(12, 14, resourceDir, transactionLogDir);
         Set<String> newDataFiles = ImmutableSet.of(
                 "age=28/part-00000-40dd1707-1d42-4328-a59a-21f5c945fe60.c000.snappy.parquet",
                 "age=29/part-00000-3794c463-cb0c-4beb-8d07-7cc1e3b5920f.c000.snappy.parquet");
-        TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir.toURI().toString(), SESSION);
-        activeDataFiles = transactionLogAccess.getActiveFiles(updatedTableSnapshot, SESSION);
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), union(originalDataFiles, newDataFiles));
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 2,
-                        "00000000000000000010.checkpoint.parquet", 2,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 3,
-                        "00000000000000000013.json", 2,
-                        "00000000000000000014.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir.toURI().toString(), SESSION);
+                    List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(updatedTableSnapshot, SESSION);
+                    assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), union(originalDataFiles, newDataFiles));
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 2)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 2)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
     }
 
     @Test
@@ -579,7 +586,7 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 12, resourceDir, transactionLogDir);
         Files.copy(new File(resourceDir, LAST_CHECKPOINT_FILENAME).toPath(), new File(transactionLogDir, LAST_CHECKPOINT_FILENAME).toPath());
 
@@ -599,7 +606,7 @@ public class TestTransactionLogAccess
         }
 
         assertEquals(expectedDataFiles.size(), dataFilesWithFixedVersion.size());
-        List<ColumnMetadata> columns = extractColumnMetadata(transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get(), TESTING_TYPE_MANAGER);
+        List<ColumnMetadata> columns = extractColumnMetadata(transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION), TESTING_TYPE_MANAGER);
         for (int i = 0; i < expectedDataFiles.size(); i++) {
             AddFileEntry expected = expectedDataFiles.get(i);
             AddFileEntry actual = dataFilesWithFixedVersion.get(i);
@@ -615,10 +622,10 @@ public class TestTransactionLogAccess
             assertTrue(actual.getStats().isPresent());
 
             for (ColumnMetadata column : columns) {
-                DeltaLakeColumnHandle columnHandle = new DeltaLakeColumnHandle(column.getName(), column.getType(), OptionalInt.empty(), column.getName(), column.getType(), REGULAR);
+                DeltaLakeColumnHandle columnHandle = new DeltaLakeColumnHandle(column.getName(), column.getType(), OptionalInt.empty(), column.getName(), column.getType(), REGULAR, Optional.empty());
                 assertEquals(expected.getStats().get().getMinColumnValue(columnHandle), actual.getStats().get().getMinColumnValue(columnHandle));
                 assertEquals(expected.getStats().get().getMaxColumnValue(columnHandle), actual.getStats().get().getMaxColumnValue(columnHandle));
-                assertEquals(expected.getStats().get().getNullCount(columnHandle.getName()), actual.getStats().get().getNullCount(columnHandle.getName()));
+                assertEquals(expected.getStats().get().getNullCount(columnHandle.getBaseColumnName()), actual.getStats().get().getNullCount(columnHandle.getBaseColumnName()));
                 assertEquals(expected.getStats().get().getNumRecords(), actual.getStats().get().getNumRecords());
             }
         }
@@ -637,7 +644,7 @@ public class TestTransactionLogAccess
         String tableLocation = tableDir.toURI().toString();
         SchemaTableName schemaTableName = new SchemaTableName("schema", tableName);
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 1, resourceDir, transactionLogDir);
 
         setupTransactionLogAccess(tableName, tableLocation);
@@ -658,7 +665,7 @@ public class TestTransactionLogAccess
     {
         // See README.md for table contents
         String tableName = "parquet_struct_statistics";
-        setupTransactionLogAccess(tableName, getClass().getClassLoader().getResource("databricks/pruning/" + tableName).toURI().toString());
+        setupTransactionLogAccess(tableName, getClass().getClassLoader().getResource("databricks73/pruning/" + tableName).toURI().toString());
 
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
 
@@ -688,11 +695,11 @@ public class TestTransactionLogAccess
             // Types would need to be specified properly if stats were being read from JSON but are not can be ignored when reading parsed stats from parquet,
             // so it is safe to use INTEGER as a placeholder
             assertEquals(
-                    fileStats.getMinColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR)),
+                    fileStats.getMinColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR, Optional.empty())),
                     Optional.of(statsValues.get(columnName)));
 
             assertEquals(
-                    fileStats.getMaxColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR)),
+                    fileStats.getMaxColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR, Optional.empty())),
                     Optional.of(statsValues.get(columnName)));
         }
     }
@@ -702,28 +709,34 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
         DeltaLakeConfig cacheDisabledConfig = new DeltaLakeConfig();
         cacheDisabledConfig.setMetadataCacheTtl(new Duration(0, TimeUnit.SECONDS));
-        setupTransactionLogAccess(tableName, tableDir, cacheDisabledConfig);
 
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, cacheDisabledConfig);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
 
         // With the transaction log cache disabled, when loading the snapshot again, all the needed files will be opened again
-        transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir.toString(), SESSION);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 2,
-                        "00000000000000000011.json", 2,
-                        "00000000000000000012.json", 2,
-                        "00000000000000000013.json", 2,
-                        "00000000000000000014.json", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir, SESSION);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
     }
 
     @Test
@@ -731,33 +744,33 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
         DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
         shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(10, TimeUnit.MINUTES));
-        setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
 
-        addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
         // The internal data cache should still contain the data files for the table
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.of());
     }
 
     @Test
@@ -765,36 +778,43 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
         DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
         shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(10, TimeUnit.MINUTES));
-        setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
 
         // Flush all cache and then load snapshot and get active files
         transactionLogAccess.flushCache();
-        transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir, SESSION);
-        addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 2,
-                        "00000000000000000011.json", 2,
-                        "00000000000000000012.json", 2,
-                        "00000000000000000013.json", 2,
-                        "00000000000000000014.json", 2,
-                        "00000000000000000010.checkpoint.parquet", 4));
+        assertFileSystemAccesses(
+                () -> {
+                    transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir, SESSION);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
     }
 
     @Test
@@ -802,34 +822,37 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
         DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
         shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(0, TimeUnit.SECONDS));
-        setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
 
         // With no caching for the transaction log entries, when loading the snapshot again,
         // the checkpoint file will be read again
-        addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 4));
+        assertFileSystemAccesses(
+                () -> {
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
     }
 
     private void copyTransactionLogEntry(int startVersion, int endVersion, File sourceDir, File targetDir)
@@ -843,5 +866,38 @@ public class TestTransactionLogAccess
             String lastTransactionName = format("%020d.json", i);
             Files.copy(new File(sourceDir, lastTransactionName).toPath(), new File(targetDir, lastTransactionName).toPath());
         }
+    }
+
+    private void assertFileSystemAccesses(ThrowingRunnable callback, Multiset<FileOperation> expectedAccesses)
+            throws Exception
+    {
+        trackingFileSystemFactory.reset();
+        callback.run();
+        assertMultisetsEqual(getOperations(), expectedAccesses);
+    }
+
+    private Multiset<FileOperation> getOperations()
+    {
+        return trackingFileSystemFactory.getOperationCounts()
+                .entrySet().stream()
+                .flatMap(entry -> nCopies(entry.getValue(), new FileOperation(
+                        entry.getKey().location().toString().replaceFirst(".*/_delta_log/", ""),
+                        entry.getKey().operationType())).stream())
+                .collect(toCollection(HashMultiset::create));
+    }
+
+    private record FileOperation(String path, TrackingFileSystemFactory.OperationType operationType)
+    {
+        FileOperation
+        {
+            requireNonNull(path, "path is null");
+            requireNonNull(operationType, "operationType is null");
+        }
+    }
+
+    private interface ThrowingRunnable
+    {
+        void run()
+                throws Exception;
     }
 }
